[gd_scene load_steps=4 format=3 uid="uid://cey4judgrg2ff"]

[ext_resource type="Script" path="res://scripts/controllers/projectile_controller.gd" id="1_jlcy7"]
[ext_resource type="AudioStream" uid="uid://wnglisrgbsnd" path="res://assets/sounds/fireball/fireball_explosion.wav" id="2_28tnk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ga81a"]
radius = 9.05539

[node name="Projectile" type="RigidBody2D"]
z_index = 2
collision_layer = 8
gravity_scale = 0.0
script = ExtResource("1_jlcy7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ga81a")

[node name="ProjectileArea" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileArea"]
shape = SubResource("CircleShape2D_ga81a")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5

[node name="ProjectileAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_28tnk")
volume_db = -15.0
max_distance = 600.0
bus = &"SFX"

[connection signal="body_entered" from="ProjectileArea" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
